# bugu

./: .dockerignore  .gitignore  .gitmodules  .golangci.yml  .pre-commit-config.yaml  Makefile  README.md  README_zh.md  app_makefile  cpp_makefile  go.mod  go.sum
.github/workflows/: code_ql_analysis.yml  docker-publish.yml  lint.yml  repo-setting.json
api/bugu/service/v1/: bugu.pb.go  bugu.pb.validate.go  bugu.proto  bugu.swagger.json  bugu_error.pb.go  bugu_error.pb.validate.go  bugu_error.proto  bugu_error.swagger.json  bugu_error_errors.pb.go  bugu_file.go  bugu_file_http.go  bugu_grpc.pb.go  bugu_http.pb.go
api/bugu/service/v1/cpp/: bugu.grpc.pb.cc  bugu.grpc.pb.h  bugu.pb.cc  bugu.pb.h
api/detect/service/v1/: detect.pb.go  detect.pb.validate.go  detect.proto  detect.swagger.json  detect_grpc.pb.go
api/detect/service/v1/cpp/: detect.grpc.pb.cc  detect.grpc.pb.h  detect.pb.cc  detect.pb.h
api/obfusion/service/v1/: bugu_obfusion.pb.go  bugu_obfusion.pb.validate.go  bugu_obfusion.proto  bugu_obfusion.swagger.json  bugu_obfusion_grpc.pb.go
api/obfusion/service/v1/cpp/: bugu_obfusion.grpc.pb.cc  bugu_obfusion.grpc.pb.h  bugu_obfusion.pb.cc  bugu_obfusion.pb.h
api/packer/service/v1/: bugu_packer.pb.go  bugu_packer.pb.validate.go  bugu_packer.proto  bugu_packer.swagger.json  bugu_packer_grpc.pb.go
api/packer/service/v1/cpp/: bugu_packer.grpc.pb.cc  bugu_packer.grpc.pb.h  bugu_packer.pb.cc  bugu_packer.pb.h
app/bugu/service/: Dockerfile  go.mod  go.sum
app/bugu/service/cmd/server/: main.go  wire.go  wire_gen.go
app/bugu/service/configs/: config.yaml  registry.yaml
app/bugu/service/internal/biz/: artifact.go  biz.go  file.go  obfusion.go  packer.go  user.go
app/bugu/service/internal/conf/: conf.pb.go  conf.proto
app/bugu/service/internal/data/: artifact.go  data.go  data_test.go  file.go  obfusion.go  packer.go  user.go
app/bugu/service/internal/server/: http.go  server.go
app/bugu/service/internal/service/: artifact.go  confusion.go  detect.go  file.go  obfusion.go  service.go  user.go
app/detect/service/: CMakeLists.txt
app/detect/service/include/bugu_dectet/: bugu_detect.h
app/detect/service/resnet/: CMakeLists.txt
app/detect/service/resnet/include/resnet/: resnet_18.h
app/detect/service/resnet/src/: g_logging.h  resnet_18.cc
app/detect/service/src/: CMakeLists.txt  bugu_detect_impl.cc  bugu_detect_impl.h  bugu_detect_server.cc  bugu_detect_server.h  main.cc
app/detect/service/src/conf/: config.h
app/detect/service/src/data/: data.cc  data.h
app/detect/service/src/thread/: x_thread.cc  x_thread.h
app/detect/service/src/thread_pool/: x_task.h  x_thread_pool.cc  x_thread_pool.h
app/detect/service/src/utils/: credentials.cc  credentials.h  interrupt_sleeper.h
app/obfusion/service/: CMakeLists.txt  Dockerfile
app/obfusion/service/include/bugu-obfusion/: bugu_obfusion.h
app/obfusion/service/include/bugu_obfusion/: bugu_obfusion.h
app/obfusion/service/src/: CMakeLists.txt  bugu_obfusion_impl.cc  bugu_obfusion_impl.h  bugu_obfusion_server.cc  bugu_obfusion_server.h  data.cc  data.h  main.cc  obfusion_task.cc  obfusion_task.h
app/obfusion/service/src/conf/: conf.proto  config.h
app/obfusion/service/src/thread/: x_thread.cc  x_thread.h
app/obfusion/service/src/thread_pool/: x_task.h  x_thread_pool.cc  x_thread_pool.h
app/obfusion/service/src/utils/: credentials.cc  credentials.h  interrupt_sleeper.h
app/packer/service/: CMakeLists.txt
app/packer/service/configs/: config.json
app/packer/service/include/bugu_packer/: bugu_packer.h
app/packer/service/src/: CMakeLists.txt  bugu_packer_impl.cc  bugu_packer_impl.h  bugu_packer_server.cc  bugu_packer_server.h  data.cc  data.h  main.cc  packer_task.cc  packer_task.h
app/packer/service/src/conf/: conf.pb.cc  conf.pb.h  config.h
app/packer/service/src/thread/: x_thread.cc  x_thread.h
app/packer/service/src/thread_pool/: x_task.h  x_thread_pool.cc  x_thread_pool.h
app/packer/service/src/utils/: credentials.cc  credentials.h  (+1 more)
deploy/docker-compose/: docker-bake.hcl  docker-compose.yml
docs/: README.md  _coverpage.md  _sidebar.md  api.html  e-code.swagger.json  index.html
docs/zh-cn/: _coverpage.md  _sidebar.md
pkg/: file.go  go.mod  go.sum  hash.go
(+37 files in other folders)
